# willekeurig

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: camera_controller.rs  main.rs  player.rs
client/src/states/: err_screen_state.rs  mod.rs  willekeuirig_state.rs
common/: Cargo.toml
common/src/: block.rs  identifier.rs  lib.rs  registry.rs  settings.rs
physics/: Cargo.toml
physics/src/: box_collider.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  camera_uniform.rs  input_manager.rs  lib.rs  texture.rs  vertex.rs
res/shaders/: shader.vert
world/: Cargo.toml
world/src/: block_culling.rs  chunk.rs  chunk_manager.rs  chunk_manager_orig.rs  generator.rs  lib.rs  transform.rs
