[package]
name = "client"
version = "0.1.0"
authors = ["crow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "../renderer" }
world = { path = "../world" }
common = { path = "../common" }
physics = { path = "../physics" }

cgmath = "0.17"

anyhow = "1"
winit = "0.25"
wgpu = "0.10"
rand = "0.8"
bytemuck = { version = "1.7", features = [ "derive" ] }
futures = "0.3"