[package]
name = "renderer"
version = "0.1.0"
authors = ["crow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
wgpu = "0.10"
wgpu_glyph = "0.14"
winit = "0.25"
image = "0.23"
cgmath = "0.17"
bytemuck = { version = "1.7", features = [ "derive" ] }
futures = "0.3"