[package]
name = "world"
version = "0.1.0"
authors = ["crow"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { path = "../renderer" }
common = { path = "../common" }
physics = { path = "../physics" }

cgmath = "0.17"

wgpu = "0.10"
rand = "0.8"
noise = "0.7"
bytemuck = { version = "1.5", features = [ "derive" ] }
rayon = "1.5"